This makes the survey question that will be used in my JavaScript and jQuery logic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Coding Track Suggestor</title>
   </head>
   <body>
+    <div class="container">
+      <form id="track-survey">
+        <div class="form-group" id="user-interest">
+          <label for="interest">Which of these interest you?</label><br>
+          <input type="radio" name="interest" id="csharp" value="C">Making internal software components.<br>
+          <input type="radio" name="interest" id="php" value="PHP">Coding a web server<br>
+          <input type="radio" name="interest" id="jscript" value="JS">>Building the front end logic for a website.<br>
+        </div>
 
+      </form>
+    </div>
   </body>
 </html>
