this starts the function to grab the selected radio button. currently this just console logs it.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
@@ -14,10 +14,13 @@
           <label for="interest">Which of these interest you?</label><br>
           <input type="radio" name="interest" id="csharp" value="C">Making internal software components.<br>
           <input type="radio" name="interest" id="php" value="PHP">Coding a web server<br>
-          <input type="radio" name="interest" id="jscript" value="JS">>Building the front end logic for a website.<br>
+          <input type="radio" name="interest" id="jscript" value="JS">Building the front end logic for a website.<br>
         </div>
-
+        <button type="submit" name="button" class="btn btn-primary" id="result">Submit</button>
       </form>
+      <div class="container" id="output">
+        test
+      </div>
     </div>
   </body>
 </html>
