This made it so the Cdiv, PHPdiv, and Jdiv are hidden by default in CSS. It then adds functionality in jQuery to button submit that uses an if elseif statement to check which radio button the user selected and shows the appropriate div for their response. The functionality for the website is complete

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         </div>
         <button type="submit" name="button" class="btn btn-primary" id="result">Submit</button>
       </form>
-      <div class="container" id="output">
-        test
+      <div class="container" id="CDiv">
+        C#
+      </div>
+      <div class="container" id="PHPDiv">
+        PHP
+      </div>
+      <div class="container" id="JDiv">
+        JavaScript
       </div>
     </div>
   </body>
