--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
   <body>
     <div class="container">
       <form id="track-survey">
+        <div class="form-group">
+          <label for="name"><h3>What is your name?</h3></label>
+          <input id="name" class="form-control" type="text">
+        </div>
+
+        <div class="form group">
+          <h3>Do you have any coding experience?</h3>
+          <select class="experience" id="user-experience">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </div>
+
+        <div class="form-groupr" id="fav-color">
+          <label for="favorite-color"><h3>What is your favorite color?</h3><p>(This is important for us to do a precise calculation, so don't lie!)</p></label>
+          <input class="form-control" type="text">
+        </div>
+
+        <div class="form-group" id="moon">
+          <label for="image-test"><h4>Please tell us what planet this moon orbits:</h4></label><br>
+          <img src="img/deathstar.jpg"><br>
+          <input type="radio" name="moon" value="Jupiter">Jupiter<br>
+          <input type="radio" name="moon" value="Saturn">Saturn<br>
+          <input type="radio" name="moon" value="Earth">Earth<br>
+          <input type="radio" name="moon" value="deathstar">That's no moon! It's a space station...<br>
+        </div>
+
         <div class="form-group" id="user-interest">
-          <label for="interest">Which of these interest you?</label><br>
+          <label for="interest"><h3>Which of these interest you?<h3></label><br>
           <input type="radio" name="interest" id="csharp" value="C">Making internal software components.<br>
           <input type="radio" name="interest" id="php" value="PHP">Coding a web server<br>
           <input type="radio" name="interest" id="jscript" value="JS">Building the front end logic for a website.<br>
