Added another div that displays the name the user entered

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <form id="track-survey">
         <div class="form-group">
           <label for="name"><h3>What is your name?</h3></label>
-          <input id="name" class="form-control" type="text">
+          <input id="user-name" class="form-control" type="text">
         </div>
 
         <div class="form group">
@@ -45,6 +45,12 @@
         </div>
         <button type="submit" name="button" class="btn btn-primary" id="result">Submit</button>
       </form>
+
+      <div class="container" id="survey-finished">
+        <h2 id="great-job"></h2>
+        <p>Based on your answers and my advanced math calculations, I suggest you take the following course...</p>
+      </div>
+
       <div class="container" id="CDiv">
         C#
       </div>
