--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           <input class="form-control text-center" type="text" id="user-color">
         </div>
 
-        <div class="form-group border border-secondary rounded" id="moon">
-          <label for="image-test"><h4>Please tell us what planet this moon orbits:</h4></label><br>
-          <img src="img/deathstar.jpg"><br>
-          <input type="radio" name="moon" value="Jupiter">Jupiter<br>
-          <input type="radio" name="moon" value="Saturn">Saturn<br>
-          <input type="radio" name="moon" value="Earth">Earth<br>
-          <input type="radio" name="moon" value="deathstar">That's no moon! It's a space station...<br>
+        <div class="form-group border border-secondary rounded" id="language">
+          <label for="image-test"><h4>What language syntax is this?</h4></label><br>
+          <img src="img/div.gif"><br>
+          <input type="radio" name="syntax" value="elven">Elven<br>
+          <input type="radio" name="syntax" value="nope">C#<br>
+          <input type="radio" name="syntax" value="correct">HTML<br>
+          <input type="radio" name="syntax" value="alien">Alien<br>
         </div>
 
         <div class="form-group border border-secondary rounded" id="user-interest">
