--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
   </head>
   <body>
     <div class="container">
-      <div class="border border-primary rounded">
+      <div class="border border-primary rounded" id="begin">
         <h1>Coding Language Track Course Selector!</h1>
         <p>Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
         <p>I am a highly advanced artificial intelligence designed to help you choose what programming language is best for you!</p>
+        <button type="button" name="button" id="um">Um...</button>
+        <button type="button" name="button" id="what">An AI? WHAT?! How?!</button>
       </div>
 
+      <div class="border border-primary rounded" id="describe">
+        <span id="happy"><h3>Yup that's right!</h3></span>
+        <span id="cautious"><h3>Don't be afraid, organic being.</h3></span>
+        <p>I'm a highly advanced AI. I use theorotical math to determine a good coding language for you based on your selections.</p>
+        <p>This site has a 99.8% success rate! Don't worry about the other 2%</p>
+        <button type="button" name="button" class="btn button-primary" id="start-survey">Ok</button>
+      </div>
+
+
       <form id="track-survey">
+        <h1>Great! Let's do this!</h1>
         <div class="form-group form-inline border border-secondary rounded" id="name-input">
           <label for="name"><h3>What is your name?</h3></label>
           <input id="user-name" class="form-control" type="text">
@@ -39,8 +51,8 @@
           <img src="img/div.gif"><br>
           <input type="radio" name="syntax" value="elven">Elven<br>
           <input type="radio" name="syntax" value="nope">C#<br>
-          <input type="radio" name="syntax" value="correct">HTML<br>
           <input type="radio" name="syntax" value="alien">Alien<br>
+          <input type="radio" name="syntax" value="correct">HTML<br>
         </div>
 
         <div class="form-group border border-secondary rounded" id="user-interest">
@@ -54,7 +66,7 @@
 
       <div class="container border border-success round" id="survey-finished">
         <h2 id="great-job"></h2>
-        <p>Based on your answers and my advanced math calculations, I suggest you take the following course...</p>
+        <p>Based on your answers and my theorotical math calculations, I suggest you take the following course...</p>
       </div>
 
       <div class="container border border-info" id="CDiv">
