changed color scheme to be like that of a terminal in Fallout

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <h1>Coding Language Track Course Selector!</h1>
         <p>Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
         <p>I am a highly advanced artificial intelligence designed to help you choose what programming language is best for you!</p>
-        <button type="button" name="button" id="um">Um...</button>
-        <button type="button" name="button" id="what">An AI? WHAT?! How?!</button>
+        <button type="button" name="button" class="btn btn-primary" id="um">Um...</button>
+        <button type="button" name="button" class="btn btn-primary" id="what">An AI? WHAT?! How?!</button>
       </div>
 
       <div class="border border-primary rounded" id="describe">
         <span id="happy"><h3>Yup that's right!</h3></span>
         <span id="cautious"><h3>Don't be afraid, organic being.</h3></span>
         <p>I'm a highly advanced AI. I use theorotical math to determine a good coding language for you based on your selections.</p>
-        <p>This site has a 99.8% success rate! Don't worry about the other 2%</p>
-        <button type="button" name="button" class="btn button-primary" id="start-survey">Ok</button>
+        <p>This site has a 99.8% success rate! Don't worry about the ot her 2%</p>
+        <button type="button" name="button" class="btn btn-primary" id="start-survey">Oh boy! Let's start!</button>
       </div>
 
 
@@ -67,20 +67,20 @@
       <div class="container border border-success round" id="survey-finished">
         <h2 id="great-job"></h2>
         <p>Based on your answers and my theorotical math calculations, I suggest you take the following course...</p>
-      </div>
 
-      <div class="container border border-info" id="CDiv">
-        <h2>C#</h2>
-        <p>C# is most popular among bigger established businesses, often for building internal software.</p>
-        <p>This language has been around for a while, and is used by Microsoft. If you like the idea of coding business software, this is the language for you!</p>
-      </div>
-      <div class="container border border-info" id="PHPDiv">
-        <h2>PHP</h2>
-        <p>PHP is a server side web development language. It is used to make scripts for servers. If you want to build a server, this may be the language for you.</p>
-      </div>
-      <div class="container border border-info" id="JDiv">
-        <h2>JavaScript</h2>
-        <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! If doing all that interests you, I suggest you learn JavaScript.</p>
+        <div class="container border border-info" id="CDiv">
+          <h2>C#</h2>
+          <p>C# is most popular among bigger established businesses, often for building internal software.</p>
+          <p>This language has been around for a while, and is used by Microsoft. If you like the idea of coding business software, this is the language for you!</p>
+        </div>
+        <div class="container border border-info" id="PHPDiv">
+          <h2>PHP</h2>
+          <p>PHP is a server side web development language. It is used to make scripts for servers. If you want to build a server, this may be the language for you.</p>
+        </div>
+        <div class="container border border-info" id="JDiv">
+          <h2>JavaScript</h2>
+          <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! If doing all that interests you, I suggest you learn JavaScript.</p>
+        </div>
       </div>
     </div>
   </body>
