made it so border colors matched the new style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="border border-primary rounded" id="begin">
+      <div class="border border-success rounded" id="begin">
         <h1>Coding Language Track Course Selector!</h1>
         <p>Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
         <p>I am a highly advanced artificial intelligence designed to help you choose what programming language is best for you!</p>
@@ -17,7 +17,7 @@
         <button type="button" name="button" class="btn btn-primary" id="what">An AI? WHAT?! How?!</button>
       </div>
 
-      <div class="border border-primary rounded" id="describe">
+      <div class="border border-success rounded" id="describe">
         <span id="happy"><h3>Yup that's right!</h3></span>
         <span id="cautious"><h3>Don't be afraid, organic being.</h3></span>
         <p>I'm a highly advanced AI. I use theorotical math to determine a good coding language for you based on your selections.</p>
@@ -28,12 +28,12 @@
 
       <form id="track-survey">
         <h1>Great! Let's do this!</h1>
-        <div class="form-group form-inline border border-secondary rounded" id="name-input">
+        <div class="form-group form-inline border border-success rounded" id="name-input">
           <label for="name"><h3>What is your name?</h3></label>
           <input id="user-name" class="form-control" type="text">
         </div>
 
-        <div class="form-group border border-secondary rounded">
+        <div class="form-group border border-success rounded">
           <h3>Do you have any coding experience?</h3>
           <select class="experience" id="user-experience">
             <option value="Yes">Yes</option>
@@ -41,12 +41,12 @@
           </select>
         </div>
 
-        <div class="form-group form-inline border border-secondary rounded" id="fav-color">
+        <div class="form-group form-inline border border-success rounded" id="fav-color">
           <label for="favorite-color"><h3>What is your favorite color?</h3><p>(This is important for us to do a precise calculation, so don't lie!)</p></label>
           <input class="form-control text-center" type="text" id="user-color">
         </div>
 
-        <div class="form-group border border-secondary rounded" id="language">
+        <div class="form-group border border-success rounded" id="language">
           <label for="image-test"><h4>What language syntax is this?</h4></label><br>
           <img src="img/div.gif"><br>
           <input type="radio" name="syntax" value="elven">Elven<br>
@@ -55,7 +55,7 @@
           <input type="radio" name="syntax" value="correct">HTML<br>
         </div>
 
-        <div class="form-group border border-secondary rounded" id="user-interest">
+        <div class="form-group border border-success rounded" id="user-interest">
           <label for="interest"><h3>Which of these interest you?<h3></label><br>
           <input type="radio" name="interest" id="csharp" value="C">Making internal software components.<br>
           <input type="radio" name="interest" id="php" value="PHP">Coding a web server<br>
@@ -68,16 +68,16 @@
         <h2 id="great-job"></h2>
         <p>Based on your answers and my theorotical math calculations, I suggest you take the following course...</p>
 
-        <div class="container border border-info" id="CDiv">
+        <div id="CDiv">
           <h2>C#</h2>
           <p>C# is most popular among bigger established businesses, often for building internal software.</p>
           <p>This language has been around for a while, and is used by Microsoft. If you like the idea of coding business software, this is the language for you!</p>
         </div>
-        <div class="container border border-info" id="PHPDiv">
+        <div id="PHPDiv">
           <h2>PHP</h2>
           <p>PHP is a server side web development language. It is used to make scripts for servers. If you want to build a server, this may be the language for you.</p>
         </div>
-        <div class="container border border-info" id="JDiv">
+        <div id="JDiv">
           <h2>JavaScript</h2>
           <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! If doing all that interests you, I suggest you learn JavaScript.</p>
         </div>
