Added fade effects to the website

--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
   </head>
   <body>
     <div class="container">
-      <div class="border border-success rounded" id="begin">
-        <h1>Coding Language Track Course Selector!</h1>
-        <p>Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
-        <p>I am a highly advanced artificial intelligence designed to help you choose what programming language is best for you!</p>
-        <button type="button" name="button" class="btn btn-primary" id="um">Um...</button>
-        <button type="button" name="button" class="btn btn-primary" id="what">An AI? WHAT?! How?!</button>
+
+      <div id="start-div">
+        <button type="button" name="button" class="btn btn-primary" id="start-button">Start CLTCS.exe</button>
       </div>
 
-      <div class="border border-success rounded" id="describe">
+      <div class="border border-success rounded" id="begin">
+        <h1 id="begin-header" class="fade-set">Coding Language Track Course Selector!</h1>
+        <p id="begin-p-1" class="fade-set">Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
+        <p id="begin-p-2" class="fade-set">I am an artificial intelligence designed to help you choose what programming language is best for you!</p>
+        <button type="button" name="button" class="btn btn-primary fade-set" id="um">Um...</button>
+        <button type="button" name="button" class="btn btn-primary fade-set" id="what">An AI? WHAT?! How?!</button>
+      </div>
+
+      <div class="border border-success rounded" id="describe" class="fade-set">
         <span id="happy"><h3>Yup that's right!</h3></span>
         <span id="cautious"><h3>Don't be afraid, organic being.</h3></span>
-        <p>I'm a highly advanced AI. I use theorotical math to determine a good coding language for you based on your selections.</p>
-        <p>This site has a 99.8% success rate! Don't worry about the ot her 2%</p>
-        <button type="button" name="button" class="btn btn-primary" id="start-survey">Oh boy! Let's start!</button>
+        <p id="describe-p-1" class="fade-set">I'm a highly advanced AI. I use theoretical math to determine a good coding language for you based on your selections.</p>
+        <p id="describe-p-2" class="fade-set">This site has a 99.8% success rate! Don't worry about the other 2%</p>
+        <button type="button" name="button" class="btn btn-primary fade-set" id="start-survey">Ok! Let's start!</button>
       </div>
 
 
