Made it so depending on if the user answered if they had coding experience, it will show them if they should learn JavaScript

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
 
       <div class="border border-success rounded" id="begin">
-        <h1 id="begin-header" class="fade-set">Coding Language Track Course Selector!</h1>
-        <p id="begin-p-1" class="fade-set">Greetings, and welcome to the CLTCS (Coding Language Tract Selector).</p>
+        <h1 id="begin-header" class="fade-set">Coding Language Track Course Selector</h1>
+        <p id="begin-p-1" class="fade-set">Greetings, and welcome to the CLTCS (Coding Language Track Selector).</p>
         <p id="begin-p-2" class="fade-set">I am an artificial intelligence designed to help you choose what programming language is best for you!</p>
         <button type="button" name="button" class="btn btn-primary fade-set" id="um">Um...</button>
         <button type="button" name="button" class="btn btn-primary fade-set" id="what">An AI? WHAT?! How?!</button>
@@ -84,7 +84,7 @@
         </div>
         <div id="JDiv">
           <h2>JavaScript</h2>
-          <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! If doing all that interests you, I suggest you learn JavaScript.</p>
+          <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! <span id="noob">It's also a good laguage for beginners, especially if learned alongside HTML and CSS.</span> If doing all that interests you, I suggest you learn JavaScript.</p>
         </div>
       </div>
     </div>
