Added Exit and Restart buttons. Fixed bugs that caused divs to show randomly

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Coding Track Suggestor</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container main-program">
 
       <div id="start-div">
         <button type="button" name="button" class="btn btn-primary" id="start-button">Start CLTCS.exe</button>
@@ -86,7 +86,14 @@
           <h2>JavaScript</h2>
           <p>JavaScript is a language developed at Netscape back in the 90's for the web. It is used to give websites lots of interactivity depending on what the user does. This website uses JavaScript! <span id="noob">It's also a good laguage for beginners, especially if learned alongside HTML and CSS.</span> If doing all that interests you, I suggest you learn JavaScript.</p>
         </div>
+        <div>
+          <button type="button" name="button" class="btn btn-primary fade-set" id="restart">Restart</button>
+          <button type="button" name="button" class="btn btn-primary fade-set" id="exit">Exit</button>
+        </div>
       </div>
+    </div>
+    <div class="container" id="exit-message">
+      <p>Thank you for using Coding Language Track Course Selector. Have a nice day.</p>
     </div>
   </body>
 </html>
