Added an error message when the user doesn't answer the last question

--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
         </div>
       </div>
     </div>
+    <div class="container border border-success round" id="error">
+      <h3>ERROR!</h3>
+      <p>Please fill the survey, you missed some question!</p>
+      <button type="button" name="button" class="btn btn-primary fade-set" id="error-ok">Ok</button>
+    </div>
     <div class="container" id="exit-message">
       <p>Thank you for using Coding Language Track Course Selector. Have a nice day.</p>
     </div>
